[project]
name = "pj-template"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "== 3.11.3"
authors = [
    { name = "Rei Araki", email = "27773575+rei-araki@users.noreply.github.com" }
]
dependencies = [
    "openai>=1.3.8",
    "streamlit>=1.37.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "watchdog>=4.0.0",
    "pytest>=8.2.0",
    "ipykernel>=6.29.4",
    "mypy>=1.10.0",
    "black>=24.4.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.rye.scripts]
dev = "streamlit run main.py"

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
pretty = true
show_traceback = true
color_output = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = false
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
